--- a/sass/components/_media-kit.scss
+++ b/sass/components/_media-kit.scss
@@ -50,7 +50,7 @@ main#main-content #mini-panel-contact_information table {
 	}
 }
 
-#mini-panel-media_appearances {
+main#main-content #mini-panel-media_appearances {
 	table {
 		margin: 1px;
 		border-collapse: separate;
